<resources>
  <string name="app_name">WhatWouldJesusDo</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_bible">Bible</string>
  <string name="menu_replay">Replay</string>
  <string name="menu_saved">Saved</string>
  <string name="menu_profile">Profile</string>
  <string name="menu_settings">Settings</string>

  <string name="login_failure_message">Unable to sign in with the provided credentials</string>
  <!-- Preference Titles -->
  <string name="messages_header">Messages</string>
  <string name="sync_header">Sync</string>

  <!-- Messages Preferences -->
  <string name="signature_title">Your signature</string>
  <string name="reply_title">Default reply action</string>

  <!-- Sync Preferences -->
  <string name="sync_title">Sync email periodically</string>
  <string name="attachment_title">Download incoming attachments</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails
  </string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="saved_2">Saved 2</string>
  <string name="saved_1">Saved 1</string>
  <string name="saved_3">Saved 3</string>
  <string name="saved_4">Saved 4</string>
  <string name="saved_5">Saved 5</string>
  <string name="replay_fragment">This fragment will take you back to where you were last reading.</string>
  <string name="search_term_hint">Search Term</string>
  <string name="menu_search">Search</string>
  <string name="menu_book">Book</string>
</resources>