<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group
    android:checkableBehavior="single">
    <item
      android:id="@+id/navigation_bible"
      android:icon="@drawable/ic_baseline_menu_bible"
      android:title="@string/menu_bible"/>
    <item
      android:id="@+id/navigation_search"
      android:icon="@android:drawable/ic_menu_search"
      android:title="@string/menu_search"/>
    <item
      android:id="@+id/navigation_replay"
      android:icon="@drawable/ic_baseline_replay_24"
      android:title="@string/menu_replay"/>
    <item
      android:id="@+id/navigation_saved"
      android:icon="@drawable/ic_baseline_save_24"
      android:title="@string/menu_saved"/>


    <item
      android:id="@+id/navigation_settings"
      android:title="@string/menu_settings"/>
  </group>
</menu>