<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/navigation_bible">

  <fragment
    android:id="@+id/navigation_bible"
    android:label="@string/menu_bible"
    android:name="edu.cnm.deepdive.whatwouldjesusdo.controller.ui.bible.BibleFragment"
    tools:layout="@layout/fragment_bible"/>

  <fragment
    android:id="@+id/navigation_saved"
    android:label="@string/menu_saved"
    android:name="edu.cnm.deepdive.whatwouldjesusdo.controller.ui.saved.SavedFragment"
    tools:layout="@layout/fragment_saved"/>


  <fragment
    android:id="@+id/navigation_settings"
    android:label="@string/menu_settings"
    android:name="edu.cnm.deepdive.whatwouldjesusdo.controller.ui.settings.SettingsFragment"
    tools:layout="@layout/fragment_settings"/>

  <fragment
    android:id="@+id/navigation_profile"
    android:label="@string/menu_profile"
    android:name="edu.cnm.deepdive.whatwouldjesusdo.controller.ui.ProfileFragment"
    tools:layout="@layout/fragment_profile"/>

  <fragment
    android:id="@+id/navigation_replay"
    android:label="@string/menu_replay"
    android:name="edu.cnm.deepdive.whatwouldjesusdo.controller.ui.ReplayFragment"
    tools:layout="@layout/fragment_replay"/>

</navigation>