<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/list"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginLeft="16dp"
  android:layout_marginRight="16dp"
  android:name="edu.cnm.deepdive.whatwouldjesusdo.controller.SavedFragment2"
  app:layoutManager="LinearLayoutManager"
  tools:context=".controller.ui.saved.SavedFragment"
  tools:listitem="@layout/saved_fragment_item">

  <Button
    android:id="@+id/Saved1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/saved_1"/>
  <Button
    android:id="@+id/Saved2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/saved_2"/>
  <Button
    android:id="@+id/Saved3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/saved_3"/>
  <Button
    android:id="@+id/Saved4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/saved_4"/>
  <Button
    android:id="@+id/Saved5"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/saved_5"/>

</androidx.recyclerview.widget.RecyclerView>